fix: adjust spacing between nav items
this prevents the greedy menu from showing on the 'lg' breakpoint

--- a/scss/6-components/_navigation.scss
+++ b/scss/6-components/_navigation.scss
@@ -81,7 +81,7 @@ nav,
 
     .cads-nav-link {
         color: $cads-palette__white;
-        padding: calc(1rem - 2px) calc(1rem - 7px);
+        padding: calc(1rem - 2px) calc(1rem - 12px);
         display: inline-block;
         text-decoration: none;
 
